--- a/online_store/templates/account.html
+++ b/online_store/templates/account.html
@@ -1,53 +1,49 @@
 {% extends "base.html" %}
 {% block content %}
 
-<img
-  src="{{ url_for('static', filename='profile-images/' + current_user.image) }}"
-  alt="{{ current_user.username }}"
->
-<h2>{{ current_user.username }}</h2>
-<p>{{ current_user.email }}</p>
-<button><a href="{{ url_for('users.logout') }}">Log Out</a></button>
+<div class="account">
+  <img
+    src="{{ url_for('static', filename='profile-images/' + current_user.image) }}"
+    alt="{{ current_user.username }}"
+  >
+  <h2>{{ current_user.username }}</h2>
+  <p>{{ current_user.email }}</p>
+  <button onclick="{{ url_for('users.logout') }}">Log Out</button>
+</div>
 
 <form class="full-form" method="POST" enctype="multipart/form-data">
   {{ form.hidden_tag() }}
   <fieldset>
     <legend>{{ title }}</legend>
-    <div>
-      {{ form.username.label }}
-      {% if form.username.errors %}
-        {{ form.username(class="is-invalid") }}
-        <div class="invalid-feedback">
-          {% for error in form.username.errors %}
-            {{ error }}
-          {% endfor %}
-        </div>
-      {% else %}
-        {{ form.username }}
-      {% endif %}
-    </div>
-    <div>
-      {{ form.email.label }}
-      {% if form.email.errors %}
-        {{ form.email(class="is-invalid") }}
-        <div class="invalid-feedback">
-          {% for error in form.email.errors %}
-            {{ error }}
-          {% endfor %}
-        </div>
-      {% else %}
-        {{ form.email }}
-      {% endif %}
-    </div>
-    <div>
-      {{ form.image.label }}
-      {{ form.image }}
-      {% if form.image.errors %}
-        {% for error in form.image.errors %}
+    {{ form.username.label }}
+    {% if form.username.errors %}
+      {{ form.username(class="is-invalid") }}
+      <div class="invalid-feedback">
+        {% for error in form.username.errors %}
           {{ error }}
         {% endfor %}
-      {% endif %}
-    </div>
+      </div>
+    {% else %}
+      {{ form.username }}
+    {% endif %}
+    {{ form.email.label }}
+    {% if form.email.errors %}
+      {{ form.email(class="is-invalid") }}
+      <div class="invalid-feedback">
+        {% for error in form.email.errors %}
+          {{ error }}
+        {% endfor %}
+      </div>
+    {% else %}
+      {{ form.email }}
+    {% endif %}
+    {{ form.image.label }}
+    {{ form.image }}
+    {% if form.image.errors %}
+      {% for error in form.image.errors %}
+        {{ error }}
+      {% endfor %}
+    {% endif %}
   </fieldset>
   <div>
     {{ form.submit }}
