--- a/online_store/static/css/main.sass
+++ b/online_store/static/css/main.sass
@@ -273,7 +273,7 @@ body
             border-bottom: 3px solid $dark-color
             outline: $dark-color
 
-          &[type="file"]
+          &[type=file]
             width: 100%
 
         .remember
