--- a/online_store/templates/admin/admin.html
+++ b/online_store/templates/admin/admin.html
@@ -1,5 +1,13 @@
 {% extends "admin/base.html" %}
-{% block title %}Admin{% endblock %}
+{% block head %}
+{{ super() }}
+
+<script src="https://unpkg.com/axios/dist/axios.min.js" defer></script>
+<script type="text/javascript" src="{{ url_for('static', filename='delete.js') }}" defer>
+
+</script>
+
+{% endblock %}
 
 {% block content %}
 
@@ -18,9 +26,7 @@
     <form class="product-form" action="{{ url_for('admin.update_product', product_id=product.id) }}" method="POST">
       <input type="submit" value="Update">
     </form>
-    <form class="product-form" action="{{ url_for('admin.delete_product', product_id=product.id) }}" method="POST">
-      <input type="submit" value="Delete">
-    </form>
+    <button type="button" onclick="deleteProduct({{ product.id }})">Delete</button>
   </div>
   {% endfor %}
 </div>
