--- a/online_store/templates/admin/add_category.html
+++ b/online_store/templates/admin/add_category.html
@@ -1,26 +1,41 @@
 {% extends "admin/base.html" %}
-{% block title %}Add Category - Admin{% endblock %}
+{% block title %}Categories{% endblock %}
 
 {% block content %}
-<form class="full-form" method="POST">
-  {{ form.hidden_tag() }}
-  <fieldset>
-    <div>
-      {{ form.name.label }}
-      {% if form.name.errors %}
-        {{ form.name(class="is-invalid") }}
-        <div class="invalid-feedback">
-          {% for error in form.name.errors %}
-            {{ error }}
-          {% endfor %}
-        </div>
-      {% else %}
-        {{ form.name }}
-      {% endif %}
+<div class="categories">
+  <div class="category-list">
+    {% for category in categories %}
+    <div class="category-item">
+      {{ category }}
+      <div class="category-actions">
+        <form class="update" method="POST">
+          <input type="submit" name="submit" value="Update">
+        </form>
+        <button class="delete" type="button">Delete</button>      
+      </div>
     </div>
-  </fieldset>
-  <div>
-    {{ form.submit }}
+    {% endfor %}
   </div>
-</form>
+  <form class="full-form" method="POST">
+    {{ form.hidden_tag() }}
+    <fieldset>
+      <div>
+        {{ form.name.label }}
+        {% if form.name.errors %}
+          {{ form.name(class="is-invalid") }}
+          <div class="invalid-feedback">
+            {% for error in form.name.errors %}
+              {{ error }}
+            {% endfor %}
+          </div>
+        {% else %}
+          {{ form.name }}
+        {% endif %}
+      </div>
+    </fieldset>
+    <div>
+      {{ form.submit }}
+    </div>
+  </form>
+</div>
 {% endblock %}
