--- a/online_store/templates/admin/category.html
+++ b/online_store/templates/admin/category.html
@@ -11,7 +11,7 @@
         <form class="update" method="POST">
           <input type="submit" name="submit" value="Update">
         </form>
-        <button class="delete" type="button">Delete</button>      
+        <button class="delete" type="button" onclick="deleteCategory({{ category.id }})">Delete</button>      
       </div>
     </div>
     {% endfor %}
