--- a/online_store/templates/admin/base.html
+++ b/online_store/templates/admin/base.html
@@ -19,7 +19,7 @@ Admin
 <nav>
   <ul>
     <li><a href="{{ url_for('admin.add_product') }}">Add Product</a></li>
-    <li><a href="{{ url_for('admin.add_category') }}">Add Category</a></li>
+    <li><a href="{{ url_for('admin.show_categories') }}">Category</a></li>
     {% if current_user.is_superadmin %}
     <li><a href="{{ url_for('admin.add_admin') }}">Add Admin</a></li>
     {% endif %}
