--- a/online_store/templates/admin/admin.html
+++ b/online_store/templates/admin/admin.html
@@ -3,9 +3,7 @@
 {{ super() }}
 
 <script src="https://unpkg.com/axios/dist/axios.min.js" defer></script>
-<script type="text/javascript" src="{{ url_for('static', filename='delete-product.js') }}" defer>
-
-</script>
+<script type="text/javascript" src="{{ url_for('static', filename='delete-product.js') }}" defer></script>
 
 {% endblock %}
 
