--- a/online_store/static/css/main.css
+++ b/online_store/static/css/main.css
@@ -8,13 +8,12 @@
   src: url("../fonts/Open-Sans-Light.eot?#iefix") format("embedded-opentype");
   src: url("../fonts/OpenSans-Light.ttf") format("truetype");
   src: url("../fonts/OpenSans-Light.woff") format("woff"); }
-body main button, body main .product-grid .product-item button, body main .product-grid .product-item .product-form input[type=submit], body main .product-detail .product-detail-text button, body main .categories .category-list .category-item .category-actions .update input, body main .categories .category-list .category-item .category-actions .delete, body main .full-form input[type=submit], body footer button {
+body main button, body main .product-grid .product-item button, body main .product-grid .product-item .product-form input[type=submit], body main .product-detail .product-detail-text button, body main .categories .category-list .category-item .update input[type=submit], body main .categories .category-list .category-item .delete, body main .full-form input[type=submit], body footer button {
   -ms-appearance: none;
   -moz-appearance: none;
   -webkit-appearance: none;
   appearance: none;
   padding: 1rem 2rem;
-  width: 80%;
   display: inline-block;
   border: none;
   margin: 0;
@@ -221,8 +220,7 @@ body {
       justify-content: center;
       align-items: center; }
       body main .categories .category-list {
-        flex-basis: 80%;
-        padding-right: 20px;
+        flex-basis: 60%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -237,37 +235,42 @@ body {
           justify-content: space-between;
           background-color: #FCDFB3;
           color: #634C29;
-          width: 70%; }
-          body main .categories .category-list .category-item .category-actions {
+          margin: 1rem 0;
+          width: 80%; }
+          body main .categories .category-list .category-item .update {
             display: flex;
             flex-direction: row;
             justify-content: center;
             align-items: center;
-            flex-basis: 40%; }
-            body main .categories .category-list .category-item .category-actions .update {
-              margin-right: 0.5rem;
-              flex-basis: 50%; }
-              body main .categories .category-list .category-item .category-actions .update input {
-                width: 100%; }
-                body main .categories .category-list .category-item .category-actions .update input:hover, body main .categories .category-list .category-item .category-actions .update input:focus {
-                  background: #B09C7D; }
-                body main .categories .category-list .category-item .category-actions .update input:focus {
-                  outline: 1px solid #B09C7D;
-                  outline-offset: -4px; }
-                body main .categories .category-list .category-item .category-actions .update input:active {
-                  transform: scale(0.95); }
-            body main .categories .category-list .category-item .category-actions .delete {
-              flex-basis: 50%;
-              margin-left: 0.5rem; }
-              body main .categories .category-list .category-item .category-actions .delete:hover, body main .categories .category-list .category-item .category-actions .delete:focus {
-                background: #B09C7D; }
-              body main .categories .category-list .category-item .category-actions .delete:focus {
-                outline: 1px solid #B09C7D;
-                outline-offset: -4px; }
-              body main .categories .category-list .category-item .category-actions .delete:active {
-                transform: scale(0.95); }
-      body main .categories form {
-        flex-basis: 20%; }
+            align-items: flex-end;
+            justify-content: space-between;
+            flex-basis: 90%;
+            margin-right: 0.5rem; }
+            body main .categories .category-list .category-item .update input[type=text] {
+              font-size: 1.5rem;
+              background-color: transparent;
+              border: none;
+              border-bottom: 3px solid #634C29;
+              color: #634C29;
+              outline: none;
+              width: 300px; }
+            body main .categories .category-list .category-item .update input[type=submit]:hover, body main .categories .category-list .category-item .update input[type=submit]:focus {
+              background: #B09C7D; }
+            body main .categories .category-list .category-item .update input[type=submit]:focus {
+              outline: 1px solid #B09C7D;
+              outline-offset: -4px; }
+            body main .categories .category-list .category-item .update input[type=submit]:active {
+              transform: scale(0.95); }
+          body main .categories .category-list .category-item .delete {
+            flex-basis: 10%;
+            margin-left: 0.5rem; }
+            body main .categories .category-list .category-item .delete:hover, body main .categories .category-list .category-item .delete:focus {
+              background: #B09C7D; }
+            body main .categories .category-list .category-item .delete:focus {
+              outline: 1px solid #B09C7D;
+              outline-offset: -4px; }
+            body main .categories .category-list .category-item .delete:active {
+              transform: scale(0.95); }
     body main .full-form {
       display: flex;
       flex-direction: column;
