--- a/online_store/static/sass/main.sass
+++ b/online_store/static/sass/main.sass
@@ -286,6 +286,7 @@ body
           background-color: $light-color
           width: 100%
           padding: 1rem
+          margin: 1rem
 
           p
             flex-basis: 55
